# notion-telegram-notifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  NOTICE  README.md  docker-compose.yml  llms.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
notify_bot/: __init__.py  config.py
notify_bot/core/: __init__.py  dedup.py  differ.py  models.py  renderer.py  router.py
notify_bot/notion/: __init__.py  client.py  parser.py  poller.py  projects.py
notify_bot/storage/: __init__.py  db.py  repo_employees.py  repo_invites.py  repo_journal.py  repo_projects.py  repo_snapshots.py  repo_state.py  schema.sql
notify_bot/telegram/: __init__.py  bot.py  fsm.py  handlers_admin.py  handlers_employee.py  middleware.py  sender.py
notify_bot/tests/: __init__.py  conftest.py  test_admin.py  test_bot.py  test_config.py  test_dedup.py  test_differ.py  test_fsm.py  test_handlers_admin.py  test_handlers_employee.py  test_imports.py  test_notion_client.py  test_parser.py  test_poller_e2e.py  test_projects.py  test_renderer.py  test_router.py  test_sender.py  test_storage.py
